--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,11 +5,55 @@ header {
 	font-size: 2em 
 }
 
+
+
 .section-title {
 	color: #A01619;
-	font-size: 1.5em
+	font-size: 1.5em;
+	font-weight: bold;
 }
 
 .text {
-	font-size: 1em;
+	font-size: 1.2em;
 }
+
+h1 {
+	color: #000;
+	text-transform: none;
+	font-size: 2.5em;
+	letter-spacing: 0.0em;
+	text-align: center;
+}
+
+h2 {
+	color: #000;
+	text-transform: none;
+	font-size: 1.4em;
+	letter-spacing: 0.0em;
+	text-align: center;
+	font-weight: normal
+}
+
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+
+.button1 {border-radius: 2px;}
+.button2 {border-radius: 4px;}
+.button3 {border-radius: 8px;}
+.button4 {border-radius: 12px;}
+.button5 {border-radius: 50%;}
